--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -148,6 +148,9 @@
   <data name="user" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\user.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="0002" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\0002.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="hide1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\hide1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -178,7 +181,7 @@
   <data name="Smaller Network Connection Background (1080p_25fps_H264-128kbit_AAC)" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Smaller Network Connection Background (1080p_25fps_H264-128kbit_AAC).gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="0002" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\0002.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="football-arena-background" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\football-arena-background.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
